# yet-another-calculator-c

./: .clang-format  .gitignore  CMakeLists.txt  README.md  ____pull-push-git.sh
src/: main.c  map_generated.c  map_generator.c  match.c  match.h  string_view.h  tokenize.c  tokenize.h  tokenizer.c  tokenizer.h
